event-details style updates

--- a/directories/events-directory/event-details/style.css
+++ b/directories/events-directory/event-details/style.css
@@ -144,6 +144,14 @@ dd.chip-domain {
   padding: 0;
 }
 
+.speaker {
+  cursor: pointer;
+}
+
+.speaker-info {
+  user-select: none;
+}
+
 .maplibregl-map {
   border-radius: 4px;
 }
