event-details style updates

--- a/directories/events-directory/event-details/style.css
+++ b/directories/events-directory/event-details/style.css
@@ -144,12 +144,16 @@ dd.chip-domain {
   padding: 0;
 }
 
-.speaker {
-  cursor: pointer;
+.profile-picture {
+  user-select: none;
 }
 
 .speaker-info {
   user-select: none;
+}
+
+.btn-icon {
+  cursor: pointer;
 }
 
 .maplibregl-map {
