events card.hbs update

--- a/bin/directories/events/card.hbs
+++ b/bin/directories/events/card.hbs
@@ -31,6 +31,7 @@
             <ul class='chips'>
               {{#each category}}<li>{{this}}</li>{{/each}}
             </ul>
+            <span class='chips-gradient'></span>
           </div>
         <a href="./event-details/?id={{yearMonth}}-{{createClass title}}">  
           <div class="panel-info">
