--- a/directories/events-directory/style.css
+++ b/directories/events-directory/style.css
@@ -728,6 +728,10 @@
     background-image: -webkit-linear-gradient(left, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 1) 100%);
 }
 
+.gridElementTextContainer .chips-gradient {
+    right: calc(50% - 40px);
+}
+
 /* .chip-domain li:last-of-type {
     margin-right: 40px;
 } */
@@ -1722,6 +1726,7 @@ input[type="search"]::placeholder {
 
     .gridElementTextContainer {
         width: 100%;
+        margin-bottom: 40px;
         /* padding: 20px; */
     }
 
@@ -1857,6 +1862,15 @@ input[type="search"]::placeholder {
         margin-top: 30px;
     }
 
+    .gridElementTextContainer .chips-gradient {
+        right: 0;
+        margin-top: 0;
+    }
+
+    .gridElementTextContainer .chip-domain {
+        margin: 2px 0 5px;
+    }
+
     .cta-container {
         justify-content: space-between;
     }
@@ -1892,12 +1906,12 @@ input[type="search"]::placeholder {
     /* Toggle Open Close Filters */
 
     #mobileToggleFilters {
-        display: block;
         width: 100%;
         display: flex;
         align-items: center;
         justify-content: space-between;
-        padding: 15px 0px;
+        gap: 5px;
+        padding: 10px 0px;
     }
 
     .filters-container {
