--- a/directories/events-directory/style.css
+++ b/directories/events-directory/style.css
@@ -444,6 +444,11 @@
     background-image: -webkit-linear-gradient(left, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 1) 100%);
 }
 
+#speakers .speakers-gradient {
+    top: 0;
+    right: 0;
+}
+
 .speaker-elements {
     display: flex;
     align-items: start;
