people style updates

--- a/directories/people/style.css
+++ b/directories/people/style.css
@@ -216,12 +216,17 @@
 } */
 
 .icons {
-    padding: 0px;
-    display: inline-flex;
+    padding: 15px 0px 0px;
+    margin-top: 5px;
+    border-top: 1px solid #cdcdcd;
+    display: flex;
     flex-direction: row;
-    text-align: center;
-    margin: 0 auto;
     gap: 10px;
+}
+
+.maplibregl-popup-content .icons {
+    padding: 10px 15px 0;
+    margin-top: 0;
 }
 
 .icon::before {
@@ -233,48 +238,190 @@
     padding-right: 10px;
 }
 
-.twitter::before {
-    font-family: "ETmodules";
+.filters {
     font-weight: 400;
-    content: "\e094";
-    font-size: 16px;
+    font-size: 20px;
     display: inline-block;
     position: relative;
-    background: #00aced;
+    background-color: rgba(255, 255, 255, .9);
+    background-image: url(https://www.fiware.org/custom/icons/blue/filters.svg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 55%;
+    border-radius: 4px;
+    width: 32px;
+    height: 32px;
+    color: #002e67;
+    text-align: center;
+    padding: 2px;
+    transition: all 0.3s ease-in-out;
+    cursor: pointer;
+}
+
+.filters:hover {
+    background-color: rgba(255, 255, 255, 1);
+    background-image: url(https://www.fiware.org/custom/icons/blue/filters.svg);
+}
+
+.website {
+    font-weight: 400;
+    font-size: 20px;
+    display: inline-block;
+    position: relative;
+    background-color: #ebebeb;
+    background-image: url(https://www.fiware.org/custom/icons/blue/website.svg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 55%;
     border-radius: 40px;
     width: 32px;
     height: 32px;
-    color: #fff;
+    color: #002e67;
     text-align: center;
-    padding-left: 8px;
-    padding-top: 5px;
+    padding: 2px;
+    transition: all 0.3s ease-in-out;
+}
+
+.website:hover {
+    background-color: #002e67;
+    background-image: url(https://www.fiware.org/custom/icons/white/website.svg);
+}
+
+.strategy {
+    font-weight: 400;
+    font-size: 20px;
+    display: inline-block;
+    position: relative;
+    background-color: #ebebeb;
+    background-image: url(https://www.fiware.org/custom/icons/blue/website.svg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 55%;
+    border-radius: 40px;
+    width: 32px;
+    height: 32px;
+    color: #002e67;
+    text-align: center;
+    padding: 2px;
+    transition: all 0.3s ease-in-out;
+}
+
+.strategy:hover {
+    background-color: #002e67;
+    background-image: url(https://www.fiware.org/custom/icons/white/website.svg);
+}
+
+.impactstory {
+    font-weight: 400;
+    font-size: 20px;
+    display: inline-block;
+    position: relative;
+    background-color: #ebebeb;
+    background-image: url(https://www.fiware.org/custom/icons/blue/impact-story.svg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 45%;
+    border-radius: 40px;
+    width: 32px;
+    height: 32px;
+    color: #002e67;
+    text-align: center;
+    padding: 2px;
+    transition: all 0.3s ease-in-out;
+}
+
+.impactstory:hover {
+    background-color: #002e67;
+    background-image: url(https://www.fiware.org/custom/icons/white/impact-story.svg);
+}
+
+.marketplace {
+    font-weight: 400;
+    font-size: 20px;
+    display: inline-block;
+    position: relative;
+    background-color: #ebebeb;
+    background-image: url(https://www.fiware.org/custom/icons/blue/marketplace.svg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 50%;
+    border-radius: 40px;
+    width: 32px;
+    height: 32px;
+    color: #002e67;
+    text-align: center;
+    padding: 2px;
+    transition: all 0.3s ease-in-out;
+}
+
+.marketplace:hover {
+    background-color: #002e67;
+    background-image: url(https://www.fiware.org/custom/icons/white/marketplace.svg);
+}
+
+.cat-website {
+    width: 32px;
+    height: 32px;
+}
+
+.twitter {
+    font-weight: 400;
+    font-size: 20px;
+    display: inline-block;
+    position: relative;
+    background-color: #ebebeb;
+    background-image: url(https://www.fiware.org/custom/icons/blue/twitter.svg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 50%;
+    border-radius: 40px;
+    width: 32px;
+    height: 32px;
+    color: #002e67;
+    text-align: center;
+    padding: 2px;
+    transition: all 0.3s ease-in-out;
+}
+
+.twitter:hover {
+    background-color: #002e67;
+    background-image: url(https://www.fiware.org/custom/icons/white/twitter.svg);
 }
 
 .cat-twitter {
     position: relative;
     width: 32px;
+    height: 32px;
 }
 
-.linkedin::before {
-    font-family: "ETmodules";
+.linkedin {
     font-weight: 400;
-    content: "\e09d";
-    font-size: 16px;
+    font-size: 20px;
     display: inline-block;
     position: relative;
-    background: #007bb6;
+    background-color: #ebebeb;
+    background-image: url(https://www.fiware.org/custom/icons/blue/linkedin.svg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 45%;
     border-radius: 40px;
     width: 32px;
     height: 32px;
-    color: #fff;
+    color: #002e67;
     text-align: center;
-    padding-right: 0px;
-    padding-top: 5px;
+    padding: 2px;
+    transition: all 0.3s ease-in-out;
+}
+
+.linkedin:hover {
+    background-color: #002e67;
+    background-image: url(https://www.fiware.org/custom/icons/white/linkedin.svg);
 }
 
 .cat-linkedin {
     position: relative;
     width: 32px;
+    height: 32px;
 }
 
 .bio::before {
@@ -289,6 +436,7 @@
     height: 32px; */
 }
 
+/*
 .cat-bio {
     position: relative;
     width: 32px;
@@ -299,7 +447,22 @@
     color: #002e67;
     text-align: center;
     padding: 1px 1px 1px 0px;
+}*/
+
+.cat-bio {
+    display: flex;
+    align-items: center;
+    gap: 5px;
+    background: #f3f3f3;
+    padding: 10px 15px;
+    border-radius: 4px;
+    font-size: 15px;
+    line-height: .7em;
+    color: #002e67;
+    transition: all 0.3s ease-in-out;
+    cursor: pointer;
 }
+
 
 .cat-bio:hover {
     color: #fff;
