--- a/directories/people/style.css
+++ b/directories/people/style.css
@@ -47,7 +47,7 @@
 }
 
 .f-cat {
-    border-radius: 8px;
+    border-radius: 4px;
     padding: 20px;
     background: rgba(255, 255, 255, 1);
     transition: all 0.4s;
@@ -221,6 +221,7 @@
     border-top: 1px solid #cdcdcd;
     display: flex;
     flex-direction: row;
+    justify-content: center;
     gap: 10px;
 }
 
@@ -452,12 +453,12 @@
 .cat-bio {
     display: flex;
     align-items: center;
-    gap: 5px;
+    justify-content: center;
     background: #f3f3f3;
-    padding: 10px 15px;
-    border-radius: 4px;
+    width: 32px;
+    height: 32px;
+    border-radius: 40px;
     font-size: 15px;
-    line-height: .7em;
     color: #002e67;
     transition: all 0.3s ease-in-out;
     cursor: pointer;
