Add lazy loading

--- a/bin/directories/events/card.hbs
+++ b/bin/directories/events/card.hbs
@@ -74,7 +74,7 @@
           <div class="gridElementLogo" >
             <a href="./event-details/?id={{yearMonth}}-{{createClass title}}">
               {{#if (ne img '')}}
-              <img class="event-image" src="{{img}}"/>
+              <img class="event-image" src="{{img}}" loading="lazy"/>
               {{/if}}
             </a>
           </div>
