--- a/bin/directories/events/recent.hbs
+++ b/bin/directories/events/recent.hbs
@@ -3,7 +3,7 @@
     	 <a class="story-details" href="./?id={{yearMonth}}-{{createClass title}}" rel="noopener">
         <div class='card card-story card-primary card-hover card-body light'>
             <div>
-                <img decoding="async" class="hero-story" src="{{img}}">
+                <img decoding="async" class="hero-story" src="{{img}}" loading="lazy">
             </div>
             <div class="story-content">
                 <h3 class="card-story-title">{{title}}</h3>
