--- a/bin/people/comms-table.hbs
+++ b/bin/people/comms-table.hbs
@@ -5,7 +5,7 @@
 {{#each this}}
     {{#if (eq department 'Comms Team')}}
     <tr>
-        <td>{{title}}{{name}}</td><td>{{department}}</td><td>{{job}}</td>
+        <td>{{title}}{{name}}</td><td>{{department}}</td><td>{{job}}</td><td>{{email}}</td>
     </tr>
     {{/if}}
 {{/each}}
