--- a/bin/people/other-table.hbs
+++ b/bin/people/other-table.hbs
@@ -8,7 +8,7 @@
     {{#if (eq department 'Tech Team')}}
     {{else}}
     <tr>
-        <td>{{title}}{{name}}</td><td>{{department}}</td><td>{{job}}</td>
+        <td>{{title}}{{name}}</td><td>{{department}}</td><td>{{job}}</td><td>{{email}}</td>
     </tr>
     {{/if}}
     {{/if}}
