--- a/bin/people/comms-table.hbs
+++ b/bin/people/comms-table.hbs
@@ -1,11 +1,18 @@
 <table>
     <tr>
-        <th>Name</th><th>Department</th><th>Job Title</th>
+        <th>Name</th><th>Department</th><th>Job Title</th><th>eMail</th><th>LinkedIn</th>
     </tr>
 {{#each this}}
     {{#if (eq department 'Comms Team')}}
     <tr>
         <td>{{title}}{{name}}</td><td>{{department}}</td><td>{{job}}</td><td>{{email}}</td>
+        <td>
+        {{#if linkedIn}}
+        <a target='_blank' href='{{linkedIn}}' rel='noopener'><span
+                class='icon linkedin'
+            ></span></a>
+        {{/if}}
+        </td>
     </tr>
     {{/if}}
 {{/each}}
