--- a/bin/people/other-table.hbs
+++ b/bin/people/other-table.hbs
@@ -1,6 +1,6 @@
 <table>
     <tr>
-        <th>Name</th><th>Department</th><th>Job Title</th>
+        <th>Name</th><th>Department</th><th>Job Title</th><th>eMail</th><th>LinkedIn</th>
     </tr>
 {{#each this}}
     {{#if (eq department 'Comms Team')}}
@@ -9,6 +9,13 @@
     {{else}}
     <tr>
         <td>{{title}}{{name}}</td><td>{{department}}</td><td>{{job}}</td><td>{{email}}</td>
+        <td>
+        {{#if linkedIn}}
+        <a target='_blank' href='{{linkedIn}}' rel='noopener'><span
+                class='icon linkedin'
+            ></span></a>
+        {{/if}}
+        </td>
     </tr>
     {{/if}}
     {{/if}}
