comms-table.hbs update

--- a/bin/people/comms-table.hbs
+++ b/bin/people/comms-table.hbs
@@ -1,5 +1,5 @@
-<table>
-    <tr>
+<table class="table-people">
+    <tr class="thead">
         <th>Name</th><th>Job Title</th><th>eMail</th><th>LinkedIn</th>
     </tr>
 {{#each this}}
