comms-table.hbs update

--- a/bin/people/comms-table.hbs
+++ b/bin/people/comms-table.hbs
@@ -5,6 +5,7 @@
 {{#each this}}
     {{#if (eq department 'Comms Team')}}
     <div class="lp-item-container">
+        <img alt='' class='lp-item-pic' src='{{img}}' loading='lazy' />
         <div class="lp-item-name">{{title}}{{name}}</div>
         <div class="lp-item-role">{{job}}</div>
         <div class="lp-item-icons">
