comms-table.hbs update

--- a/bin/people/comms-table.hbs
+++ b/bin/people/comms-table.hbs
@@ -10,14 +10,10 @@
         <div class="lp-item-role">{{job}}</div>
         <div class="lp-item-icons">
             {{#if email}}
-            <div class="cat-email">
-            <a target='_blank' href='{{email}}' rel='noopener'>
-                <span class='icon email'></span>
-            </a>
-            </div>
+            <div class="cat-email">{{email}}</div>
             {{/if}}
-            </td>
-            <td>
+            </div>
+            <div>
             {{#if linkedIn}}
             <div class="cat-linkedin">
             <a target='_blank' href='{{linkedIn}}' rel='noopener'>
