comms-table.hbs update

--- a/bin/people/comms-table.hbs
+++ b/bin/people/comms-table.hbs
@@ -8,7 +8,7 @@
         <img alt='' class='lp-item-pic' src='{{img}}' loading='lazy' />
         <div class="lp-item-name">{{title}}{{name}}</div>
         <div class="lp-item-role">{{job}}</div>
-        <div class="lp-item-icons">
+        <div class="lp-item-contacts">
             {{#if email}}
                 <div class="cat-email">{{email}}</div>
             {{/if}}
