tables.hbs updates

--- a/bin/people/techincal-table.hbs
+++ b/bin/people/techincal-table.hbs
@@ -3,7 +3,7 @@
         <div>Name</div><div>Job Title</div><div>eMail</div><div>LinkedIn</div>
     </div>
 {{#each this}}
-    {{#if (eq department 'Operations')}}
+    {{#if (eq department 'Technical')}}
     <div class="lp-item-container">
         <img alt='' class='lp-item-pic' src='{{img}}' loading='lazy' />
         <div class="lp-item-name">{{title}}{{name}}</div>
