tables.hbs updates

--- a/bin/people/tech-table.hbs
+++ b/bin/people/tech-table.hbs
@@ -6,9 +6,8 @@
     {{#if (eq department 'Technical')}}
     <div class="lp-item-container">
         <img alt='' class='lp-item-pic' src='{{img}}' loading='lazy' />
-        <div class="lp-item-name">{{title}}{{name}}</div>
+        <div class="lp-item-name">{{name}}</div>
         <div class="lp-item-role">{{job}}</div>
-        <div class="lp-item-team">{{team}}</div>
         <div class="lp-item-contacts">
             {{#if email}}
                 <div class="cat-email">{{email}}</div>
