--- a/bin/people/ops-table.hbs
+++ b/bin/people/ops-table.hbs
@@ -6,7 +6,7 @@
     {{#if (eq department 'Operations')}}
     <div class="lp-item-container">
         <img alt='' class='lp-item-pic' src='{{img}}' loading='lazy' />
-        <div class="lp-item-name">{{title}}{{name}}</div>
+        <div class="lp-item-name">{{name}}</div>
         <div class="lp-item-role">{{job}}</div>
         <div class="lp-item-team">{{team}}</div>
         <div class="lp-item-contacts">
