table main figures update

--- a/bin/directories/main-figures/table.hbs
+++ b/bin/directories/main-figures/table.hbs
@@ -2,5 +2,11 @@
 <div class="card">
  <div class="md-figure-name"><h5>{{name}}</h5></div>
  <div class="md-value--large">{{value}}</div>
+ <a class='' target='_blank' href='{{website}}' rel='noopener'>
+    View website
+    <span class="material-symbols-outlined">
+        arrow_right_alt
+    </span>
+ </a>
 </div>
 {{/each}}
