--- a/directories/open-calls/style.css
+++ b/directories/open-calls/style.css
@@ -111,6 +111,7 @@
 
 .grid-item img {
     width: auto;
+    aspect-ratio: 20/36;
     border-top-left-radius: 4px;
     border-top-right-radius: 4px;
 }
