Validate Flags, Thumbs, Images and PDFs.

--- a/bin/directories/impact-stories/card.hbs
+++ b/bin/directories/impact-stories/card.hbs
@@ -24,11 +24,11 @@
                 <!--span class="material-symbols-outlined">description</span-->
                 Medium
             </a>
-            <a class="cat-info" target="_blank" href="{{pdf}}">
+            <a class="cat-info" target="_blank" href="{{pdfUrl}}">
                 <!--span class="material-symbols-outlined">description</span-->
                 PDF
             </a>
-            <img src='{{flag}}' alt='{{language}}' class='flag' {{#if (gt @index 9)}}loading="lazy"{{/if}} />
+            <img src='{{flagUrl}}' alt='{{language}}' class='flag' {{#if (gt @index 9)}}loading="lazy"{{/if}} />
         </div>
     </div>
 </div>
