--- a/bin/directories/impact-stories/latest.hbs
+++ b/bin/directories/impact-stories/latest.hbs
@@ -37,7 +37,7 @@
                     href="{{website}}"
                     target="_blank" rel="noopener"><span class="material-symbols-outlined">description</span>Read</a>
                 <a id="is-pdf" class="details"
-                    href="{{pdf}}" target="_blank"
+                    href="{{pdfUrl}}" target="_blank"
                     rel="noopener"><span class="material-symbols-outlined">download</span>Download</a>
             </div>
         </div>
