--- a/bin/directories/research-development/card.hbs
+++ b/bin/directories/research-development/card.hbs
@@ -42,7 +42,7 @@
                     {{/if}}
                 </div>
                 {{/if}}
-                <img class='flag' src="{{flag}}" alt="{{country}}" {{#if (gt @index 9)}}loading="lazy"{{/if}}/>
+                <img class='flag' src="{{flagUrl}}" alt="{{country}}" {{#if (gt @index 9)}}loading="lazy"{{/if}}/>
             </div>
         </div>
 
