--- a/bin/directories/marketing-toolbox/card.hbs
+++ b/bin/directories/marketing-toolbox/card.hbs
@@ -23,7 +23,7 @@
 
             <div class="icons">
                 {{#if language}}
-                <img alt='{{language}}' class='flag' src='{{flag}}' loading='lazy' {{#if (gt @index 9)}}loading="lazy"{{/if}} />
+                <img alt='{{language}}' class='flag' src='{{flagUrl}}' loading='lazy' {{#if (gt @index 9)}}loading="lazy"{{/if}} />
                 {{/if}}
             </div>
         </div>
