main-figures updates

--- a/bin/directories/main-figures/table.hbs
+++ b/bin/directories/main-figures/table.hbs
@@ -2,11 +2,13 @@
 <div class="card">
  <div class="md-figure-name"><h5>{{name}}</h5></div>
  <div class="md-value--large">{{value}}</div>
- <a class='' target='_blank' href='{{website}}' rel='noopener'>
+ <a target='_blank' href='{{website}}' rel='noopener'>
+    <div class="">
     View website
     <span class="material-symbols-outlined">
         arrow_right_alt
     </span>
+    </div>
  </a>
 </div>
 {{/each}}
