main-figures hbs update

--- a/bin/directories/main-figures/table.hbs
+++ b/bin/directories/main-figures/table.hbs
@@ -3,7 +3,7 @@
  <div class="md-figure-name"><h5>{{name}}</h5></div>
  <div class="md-value--large">{{value}}</div>
  <a target='_blank' href='{{website}}' rel='noopener'>
-    <div class="">
+    <div class="md-button md-button--icon">
     View website
     <span class="material-symbols-outlined">
         arrow_right_alt
