--- a/bin/people/card.hbs
+++ b/bin/people/card.hbs
@@ -44,7 +44,7 @@
                     <div class='cat-location'><span class='location-label'>{{country}}</span><img
                             alt='{{country}}'
                             class='flag'
-                            src='{{flag}}'
+                            src='{{flagUrl}}'
                             loading='lazy'
                         /></div>
                 {{/if}}
