--- a/bin/people/modal.hbs
+++ b/bin/people/modal.hbs
@@ -32,6 +32,6 @@ var companies = [
 {{#each people}}
     { name: "{{title}}{{name}}", img: "{{img}}", position: "{{job}}", company: "{{company}}{{companyType}}", "company-link": "{{website}}",
     content: "{{bio}}", linkedin: "{{linkedIn}}", twitter: "{{twitter}}", domain: "{{domain}}", location: "{{country}}",
-    flag: "{{flag}}", },
+    flag: "{{flagUrl}}", },
 {{/each}}
 ];
