--- a/bin/directories/cities/card.hbs
+++ b/bin/directories/cities/card.hbs
@@ -8,7 +8,7 @@
             <a href="./city-details?id={{createClass city}}">
             <div class="label-location">
                 <h3>{{country}}</h3>
-                <img class="flag" alt="{{country}}"src="{{flag}}" 
+                <img class="flag" alt="{{country}}"src="{{flagUrl}}" 
                  {{#if (gt @index 9)}}loading="lazy"{{/if}}>
             </div>
             <h6 class="ihub-name">{{city}}</h6>
